# pointctl

./: .gitignore  Cargo.toml  LICENSE  README.md  _build.rs  build.rs  check.sh  ci-sketch  exit_codes.md  pipeline.md  questions.md
data/: .gitattributes  projection-explainer.tar.xz  readme.md  unpack.sh
data/AirQuality/: AirQuality-AE-2d.csv  AirQuality-AE-3d.csv  AirQuality-DM-2d.csv  AirQuality-DM-3d.csv  AirQuality-F-ICA-2d.csv  AirQuality-F-ICA-3d.csv  AirQuality-FA-2d.csv  AirQuality-FA-3d.csv  AirQuality-G-RP-2d.csv  AirQuality-G-RP-3d.csv  AirQuality-H-LLE-2d.csv  AirQuality-H-LLE-3d.csv  AirQuality-I-PCA-2d.csv  AirQuality-I-PCA-3d.csv  AirQuality-ISO-2d.csv  AirQuality-ISO-3d.csv  AirQuality-K-PCA-P-2d.csv  AirQuality-K-PCA-P-3d.csv  AirQuality-K-PCA-R-2d.csv  AirQuality-K-PCA-R-3d.csv  AirQuality-K-PCA-S-2d.csv  AirQuality-K-PCA-S-3d.csv  AirQuality-L-LTSA-2d.csv  AirQuality-L-LTSA-3d.csv  AirQuality-L-MDS-2d.csv  AirQuality-L-MDS-3d.csv  AirQuality-LE-2d.csv  AirQuality-LE-3d.csv  AirQuality-LLE-2d.csv  AirQuality-LLE-3d.csv  AirQuality-LPP-2d.csv  AirQuality-LPP-3d.csv  AirQuality-LTSA-2d.csv  AirQuality-LTSA-3d.csv  AirQuality-M-LLE-2d.csv  AirQuality-M-LLE-3d.csv  AirQuality-MDS-2d.csv  AirQuality-MDS-3d.csv  AirQuality-N-MDS-2d.csv  AirQuality-N-MDS-3d.csv  (+17 more)
data/CityPollution/: CitiesAirPollution_oneSite-pca-2d.csv  CitiesAirPollution_oneSite-tsne-2d.csv  CitiesAirPollution_oneSite.csv  CityPollution-AE-2d.csv  CityPollution-AE-3d.csv  CityPollution-F-ICA-2d.csv  CityPollution-F-ICA-3d.csv  CityPollution-FA-2d.csv  CityPollution-FA-3d.csv  CityPollution-G-RP-2d.csv  CityPollution-G-RP-3d.csv  CityPollution-H-LLE-2d.csv  CityPollution-H-LLE-3d.csv  CityPollution-I-PCA-2d.csv  CityPollution-I-PCA-3d.csv  CityPollution-ISO-2d.csv  CityPollution-ISO-3d.csv  CityPollution-K-PCA-P-2d.csv  CityPollution-K-PCA-P-3d.csv  CityPollution-K-PCA-R-2d.csv  CityPollution-K-PCA-R-3d.csv  CityPollution-K-PCA-S-2d.csv  CityPollution-K-PCA-S-3d.csv  CityPollution-L-LTSA-2d.csv  CityPollution-L-LTSA-3d.csv  CityPollution-L-MDS-2d.csv  CityPollution-L-MDS-3d.csv  CityPollution-LLE-2d.csv  CityPollution-LLE-3d.csv  CityPollution-LPP-2d.csv  CityPollution-LPP-3d.csv  CityPollution-LTSA-2d.csv  CityPollution-LTSA-3d.csv  CityPollution-M-LLE-2d.csv  CityPollution-M-LLE-3d.csv  CityPollution-NMF-2d.csv  CityPollution-NMF-3d.csv  CityPollution-NPE-2d.csv  CityPollution-NPE-3d.csv  CityPollution-PCA-2d.csv  (+11 more)
data/Concrete/: Concrete-AE-2d.csv  Concrete-AE-3d.csv  Concrete-DM-2d.csv  Concrete-DM-3d.csv  Concrete-F-ICA-2d.csv  Concrete-F-ICA-3d.csv  Concrete-FA-2d.csv  Concrete-FA-3d.csv  Concrete-G-RP-2d.csv  Concrete-G-RP-3d.csv  Concrete-H-LLE-2d.csv  Concrete-H-LLE-3d.csv  Concrete-I-PCA-2d.csv  Concrete-I-PCA-3d.csv  Concrete-ISO-2d.csv  Concrete-ISO-3d.csv  Concrete-K-PCA-P-2d.csv  Concrete-K-PCA-P-3d.csv  Concrete-K-PCA-R-2d.csv  Concrete-K-PCA-R-3d.csv  Concrete-K-PCA-S-2d.csv  Concrete-K-PCA-S-3d.csv  Concrete-L-LTSA-2d.csv  Concrete-L-LTSA-3d.csv  Concrete-L-MDS-2d.csv  Concrete-L-MDS-3d.csv  Concrete-LE-2d.csv  Concrete-LE-3d.csv  Concrete-LLE-2d.csv  Concrete-LLE-3d.csv  (+29 more)
examples/: conrod.rs  cuda-add.rs  cuda-hello.rs  cuda.rs  linalg.rs  progress-bar.rs  random-point-cloud.rs  texture.rs  two-window-tests.rs  ui.rs
inverse_projections/: .gitignore  Pipfile  Readme.md  get_datasets.py  nnp.py
jupyter/: Main.ipynb  Pipfile
kernels/: hello-world.cu
notes/: TODO.md  ann-testing.md  ci-sketch.md  cuda.md  install-deps.md  measure-pref.md  parameter-tuning.md  pipeline.md  questions.md  testing.md  threaded-algoritm.md
python-repl/: Benchmark.ipynb  Bunny.ipynb  Cube.ipynb  Pipfile  Repl.ipynb  Untitled.ipynb  amdahl.ipynb  nd-clusters.ipynb  readme.md  run.sh  shading.ipynb
src/: create-flame-graph.md  generate.rs  lib.rs  main.rs  ply.rs
(+360 files in other folders)
